--- a/TeX/cv.tex
+++ b/TeX/cv.tex
@@ -29,8 +29,6 @@
 
         web: \href{https://mblobao.github.io/}{https://mblobao.github.io/}
     \end{minipage}
-    
-    \vspace{2mm}
 
     \begin{minipage}[t]{0.3\textwidth}
         \cvsection{Links}{Links}
@@ -41,8 +39,20 @@
             \captxt{Portuguese: Native}{Português: Nativo}\\
             \captxt{English: Fluent}{Inglês: Fluente}
         
-        \include{sections/skills}
-        
+        \cvsection{Skills}{Habilidades}
+            OS\\
+            Windows
+            \vspace{2mm}
+            \\\captxt{LANGUAGES}{LINGUAGENS}\\
+            Python, Javascript, HTML
+            \vspace{2mm}
+            \\\captxt{DATABASES}{BANCOS DE DADOS}\\
+            SQLite
+            \vspace{2mm}
+            \\\captxt{OTHERS}{OUTROS}\\
+            Markdown, Git, LaTeX,\\
+            Microsoft Office,\\
+            Minitab
         \include{sections/education}
         
     \end{minipage}
@@ -50,7 +60,7 @@
     \begin{minipage}[t]{0.65\textwidth} 
     
         \include{sections/experience}
-        \include{sections/publications}
+        \include{sections/publication}
         
     \end{minipage}
 \end{document}
