--- a/TeX/sections/education.tex
+++ b/TeX/sections/education.tex
@@ -1,7 +1,7 @@
-\cvsection{Educação}{Education}
+\cvsection{Education}{Educação}
     \education{Data Science MBA}{MBA Ciências de Dados}
               {Feb/21 - now}{Fev/21 - em andamento}
-              {UNIVERSIDADE DE SÃO PAULO}
+              {UNIVERSIDADE DE S\~AO PAULO}
     \education{Mech. Eng. Development}{Formação Eng. Mec.}
               {Feb/19 - Sep/19}{Fev/19 - Set/19}
               {ACADEMIA TRANSPETRO}
