--- a/TeX/sections/experience.tex
+++ b/TeX/sections/experience.tex
@@ -1,4 +1,4 @@
-\cvsection{Experiência}{Experience}
+\cvsection{Experience}{Experiência}
     % Function, função, company, period, periodo
     \begin{experience}
           {Planning Engineer}{Engenheiro de Planejamento}
